deployment/app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
      version: 1.0.0
  template:
    metadata:
      labels:
        app: app
        version: 1.0.0
    spec:
      containers:
        - name: app
          image: app:1.0.0
#          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
            - name: multicast
              containerPort: 5701
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
spec:
  selector:
    app: app
    version: 1.0.0
  ports:
    - name: http
      port: 80
      targetPort: http
