deployment/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8-redis
  template:
    metadata:
      labels:
        app: k8-redis
    spec:
      containers:
        - name: k8-redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: k8-redis
spec:
  type: LoadBalancer
  selector:
    app: k8-redis
  ports:
  - protocol: TCP
    port: 6379
